@@ -73,8 +73,8 @@ The Jalv prompt supports several commands for interactive control:
 
 .SH "SEE ALSO"
 .BR jalv.gtk(1),
-.BR jalv.gtkmm(1),
-.BR jalv.qt(2),
+.BR jalv.gtk3(1),
+.BR jalv.qt5(2),
 .BR lv2ls(1),
 .BR jackd(1)
 
