@@ -1,7 +1,7 @@
-.TH JALV.GTK "18 Feb 2017"
+.TH JALV.GTK "27 May 2022"
 
 .SH NAME
-.B jalv.gtk \- Run an LV2 plugin as a JACK application (Gtk version).
+.B jalv.gtk \- Run an LV2 plugin as a JACK application (Gtk3 version).
 
 .SH SYNOPSIS
 .B jalv.gtk [OPTION]... PLUGIN_URI
@@ -46,7 +46,7 @@ Print trace messages from plugin.
 
 .SH "SEE ALSO"
 .BR jalv(1),
-.BR jalv.gtk3(1),
+.BR jalv.gtk(1),
 .BR jalv.qt5(1),
 .BR lv2ls(1),
 .BR jackd(1)
