@@ -1,25 +1,0 @@
-.TH JALV.QT 1 "19 Apr 2012"
-
-.SH NAME
-.B jalv.qt \- Run an LV2 plugin as a JACK application (Qt version).
-
-.SH SYNOPSIS
-.B jalv.qt PLUGIN_URI
-
-.SH DESCRIPTION
-
-This is a version of Jalv with a GUI implemented in Qt.  It is mainly for
-developer testing purposes, for a production ready program use jalv.gtk.
-
-.SH "SEE ALSO"
-.BR jalv(1),
-.BR jalv.gtkmm(1),
-.BR jalv.qt(2),
-.BR lv2ls(1),
-.BR jackd(1)
-
-.SH AUTHOR
-jalv was written by David Robillard <d@drobilla.net>
-.PP
-This manual page was written by Jaromír Mikes <mira.mikes@seznam.cz>
-and David Robillard <d@drobilla.net>
