@@ -1,20 +1,20 @@
-.TH JALV.GTKMM 1 "19 Apr 2012"
+.TH JALV.QT 1 "19 Apr 2012"
 
 .SH NAME
-.B jalv.gtkmm \- Run an LV2 plugin as a JACK application (Gtkmm version).
+.B jalv.qt \- Run an LV2 plugin as a JACK application (Qt version).
 
 .SH SYNOPSIS
-.B jalv.gtkmm PLUGIN_URI
+.B jalv.qt PLUGIN_URI
 
 .SH DESCRIPTION
 
-This is a version of Jalv with a GUI implemented in Gtkmm.  It is mainly for
+This is a version of Jalv with a GUI implemented in Qt.  It is mainly for
 developer testing purposes, for a production ready program use jalv.gtk.
 
 .SH "SEE ALSO"
 .BR jalv(1),
 .BR jalv.gtk(1),
-.BR jalv.qt(2),
+.BR jalv.gtk3(1),
 .BR lv2ls(1),
 .BR jackd(1)
 
